--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,16 @@ Description: What the package does (one paragraph).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Suggests: 
     covr
 Depends: 
     magclass,
     madrat,
-    mrcommons
+    mrcommons,
+    data.table,
+    readxl,
+    rmndt,
+    stringr,
+    zoo
 Date: 2022-01-25
