--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mredgetransport
 Title: What the Package Does (One Line, Title Case)
-Version: 0.0.1
+Version: 0.0.1.9001
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -11,13 +11,13 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Suggests: 
     covr
-Depends: 
+Imports:
     magclass,
     madrat,
-    mrcommons,
-    data.table,
-    readxl,
     rmndt,
-    stringr,
-    zoo
-Date: 2022-01-25
+    zoo,
+    magrittr,
+    quitte
+Depends: 
+    data.table
+Date: 2023-01-05
