--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(readGCAM)
 export(readPSI)
 export(readTRACCS)
 export(readUCD)
+export(toolAggregateVehicleTypes)
 export(toolIEAharmonization)
 export(toolPrepareEUROSTAT)
 export(toolPrepareGCAM)
