Linter fixes for subsidies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(toolIEAharmonization)
 export(toolPrepareEUROSTAT)
 export(toolPrepareGCAM)
 export(toolPreparePSI)
+export(toolPreparePurchasePriceSubsidies)
 export(toolPrepareUCD)
 import(data.table)
 import(mrremind)
