--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,10 @@
 Package: mrtransport
 Title: Input data generation for the EDGE-Transport model
-Version: 0.4.0
+Version: 0.4.0.9001
 Authors@R: c(
     person("Johanna", "Hoppe", , "johanna.hoppe@pik-potsdam.de", role = c("aut", "cre"),
+           comment = c(ORCID = "0009-0004-6753-5090")),
+    person("Jarusch", "Müßel", , "jarusch.muessel@pik-potsdam.de", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0004-6753-5090")),
     person("Alois", "Dirnaichner", role = "aut"))
 Description: The mrtransport package contains data preprocessing for the
@@ -24,7 +26,4 @@ Imports:
     zoo,
     magrittr,
     quitte
-Depends: 
-    R (>= 3.1),
-    data.table (>= 1.11.0)
-Date: 2024-04-18
+Date: 2024-05-23
