--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: mrtransport
 Title: Input data generation for the EDGE-Transport model
-Version: 0.4.0.9001
+Version: 0.4.0.9002
 Authors@R: c(
     person("Johanna", "Hoppe", , "johanna.hoppe@pik-potsdam.de", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0004-6753-5090")),
-    person("Jarusch", "Müßel", , "jarusch.muessel@pik-potsdam.de", role = c("aut", "cre"),
+    person("Jarusch", "Muessel", , "jarusch.muessel@pik-potsdam.de", role = c("aut"),
            comment = c(ORCID = "0009-0004-6753-5090")),
     person("Alois", "Dirnaichner", role = "aut"))
 Description: The mrtransport package contains data preprocessing for the
@@ -25,5 +25,6 @@ Imports:
     readxl,
     zoo,
     magrittr,
-    quitte
-Date: 2024-05-23
+    quitte,
+    data.table
+Date: 2024-05-24
