--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ export(readTRACCS)
 export(readUCD)
 export(toolAggregateVehicleTypes)
 export(toolIEAharmonization)
-export(toolPrepareEurostat)
+export(toolPrepareEurostatEnergyCountryDataSheets)
 export(toolPrepareGCAM)
 export(toolPreparePSI)
 export(toolPreparePurchasePriceSubsidies)
