--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,8 +14,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Suggests: 
-    covr
+    covr,
+    mrdrivers (>= 2.0.0)
 Imports:
+    GDPuc,
     magclass,
     madrat,
     rmndt,
