--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,9 @@ URL: https://github.com/pik-piam/mrtransport
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Suggests: 
-    covr,
-    mrdrivers (>= 2.0.0)
+Depends:
+    madrat (>= 3.7.1),
+    mrdrivers (>= 2.0.0) 
 Imports:
     GDPuc,
     magclass,
@@ -27,4 +27,6 @@ Imports:
     magrittr,
     quitte,
     data.table
+Suggests: 
+    covr
 Date: 2024-07-17
