--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: mrtransport
 Title: Input data generation for the EDGE-Transport model
-Version: 0.7.0.9001
+Version: 0.7.1
 Authors@R: c(
     person("Johanna", "Hoppe", , "johanna.hoppe@pik-potsdam.de", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0004-6753-5090")),
-    person("Jarusch", "Muessel", "jarusch.muessel@pik-potsdam.de", role = c("aut")),
+    person("Jarusch", "Muessel", , "jarusch.muessel@pik-potsdam.de", role = c("aut")),
     person("Alois", "Dirnaichner", role = "aut"))
 Description: The mrtransport package contains data preprocessing for the
     EDGE-Transport model.
@@ -26,5 +26,5 @@ Imports:
     magrittr,
     quitte,
     data.table
-Date: 2024-09-06
+Date: 2024-09-20
 
