--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mrtransport
 Title: Input data generation for the EDGE-Transport model
-Version: 0.7.1
+Version: 0.7.2
 Authors@R: c(
     person("Johanna", "Hoppe", , "johanna.hoppe@pik-potsdam.de", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0004-6753-5090")),
@@ -17,7 +17,7 @@ Depends:
     madrat (>= 3.7.1),
     mrdrivers (>= 2.0.0) 
 Imports:
-    GDPuc,
+    GDPuc (>= 1.1.0),
     magclass,
     rmndt,
     stringr,
@@ -26,5 +26,5 @@ Imports:
     magrittr,
     quitte,
     data.table
-Date: 2024-09-20
+Date: 2024-09-23
 
