replace unit conversion functions with madrat tool wrappers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(toolPrepareGCAM)
 export(toolPreparePSI)
 export(toolPreparePurchasePriceSubsidies)
 export(toolPrepareUCD)
+import(GDPuc)
 import(data.table)
 import(madrat)
 import(mrdrivers)
