--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,10 +18,13 @@ export(toolPrepareUCD)
 import(GDPuc)
 import(data.table)
 import(madrat)
+import(mrcommons)
 import(mrdrivers)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
 importFrom(data.table,merge.data.table)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(madrat,calcOutput)
 importFrom(madrat,getISOlist)
 importFrom(madrat,readSource)
@@ -44,4 +47,6 @@ importFrom(readxl,read_excel)
 importFrom(rmndt,approx_dt)
 importFrom(rmndt,magpie2dt)
 importFrom(stringr,str_extract)
+importFrom(tidyr,unite)
+importFrom(tidyselect,all_of)
 importFrom(zoo,na.approx)
