--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,9 +25,11 @@ Imports:
     magrittr,
     quitte,
     readxl,
+    rlang,
     rmndt,
     stringr,
     tidyr,
     tidyselect,
+    utils,
     zoo
 Date: 2024-11-22
