--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,8 +23,6 @@ import(mrdrivers)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
 importFrom(data.table,merge.data.table)
-importFrom(dplyr,filter)
-importFrom(dplyr,mutate)
 importFrom(madrat,calcOutput)
 importFrom(madrat,getISOlist)
 importFrom(madrat,readSource)
@@ -33,17 +31,23 @@ importFrom(madrat,toolCountry2isocode)
 importFrom(madrat,toolCountryFill)
 importFrom(madrat,vcat)
 importFrom(magclass,"getItems<-")
+importFrom(magclass,"getNames<-")
 importFrom(magclass,"getSets<-")
 importFrom(magclass,as.magpie)
+importFrom(magclass,dimSums)
 importFrom(magclass,getItems)
+importFrom(magclass,getNames)
 importFrom(magclass,getSets)
 importFrom(magclass,getYears)
+importFrom(magclass,mbind)
 importFrom(magclass,mselect)
 importFrom(magclass,setComment)
+importFrom(magclass,setNames)
 importFrom(magclass,time_interpolate)
 importFrom(magrittr,`%>%`)
 importFrom(quitte,as.quitte)
 importFrom(readxl,read_excel)
+importFrom(rlang,.data)
 importFrom(rmndt,approx_dt)
 importFrom(rmndt,magpie2dt)
 importFrom(stringr,str_extract)
