add read function for REMIND fuel prices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(convertUCD)
 export(correctGCAM)
 export(readGCAM)
 export(readPSI)
+export(readREMINDinputForTransportStandalone)
 export(readTRACCS)
 export(readUCD)
 export(toolAggregateVehicleTypes)
@@ -23,6 +24,7 @@ import(mrdrivers)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
 importFrom(data.table,merge.data.table)
+importFrom(gdx,readGDX)
 importFrom(madrat,calcOutput)
 importFrom(madrat,getISOlist)
 importFrom(madrat,readSource)
