--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: mrtransport
 Title: Input data generation for the EDGE-Transport model
-Version: 0.9.0
+Version: 0.10.0
 Authors@R: c(
     person("Johanna", "Hoppe", , "johanna.hoppe@pik-potsdam.de", role = c("aut", "cre"),
            comment = c(ORCID = "0009-0004-6753-5090")),
@@ -21,6 +21,7 @@ Depends:
 Imports:
     data.table,
     dplyr,
+    gdx,
     magclass,
     magrittr,
     quitte,
@@ -32,4 +33,4 @@ Imports:
     tidyselect,
     utils,
     zoo
-Date: 2024-11-29
+Date: 2024-12-09
